# robautonoma-2025

./: README.md
autlab1/: CMakeLists.txt  package.xml
autlab1/launch/: turtlebot3_maze.launch
autlab1/src/: pub_sub  publisher_joy  publisher_point  publisher_pose  publisher_quaternion  subs_joy  subs_point  subs_pose  subs_quaternion
autlab1/worlds/: turtlebot3_maze.world
autlab3/: CMakeLists.txt  package.xml
autlab3/launch/: turtlebot3_world1.launch  turtlebot3_world2.launch
autlab3/src/: show_image
autlab3/worlds/: turtlebot3_world1.world
autlab6/: CMakeLists.txt  package.xml
autlab6/launch/: turtlebot3_world.launch
autlab6/urdf/: kinect.urdf.xacro  turtlebot3.urdf.xacro
autlab7/: CMakeLists.txt  package.xml
autlab7/launch/: infrared_world.launch
autlab7/src/: imuclass.py
autlab7/worlds/: infrared.world
autlab8/: CMakeLists.txt  package.xml
autlab8/config/: location.rviz  showmap.rviz
autlab8/launch/: show_map.launch  turtlebot3_amcl.launch  turtlebot3_slam_mapping.launch  turtlebot3_world1.launch
autlab8/launch/amcl_turtlebot3/: turtlebot3_amcl_helper.launch
